# motor-calibration-DLL

./: .gitignore  CMakeLists.txt  EposCmd.cpp  EposCmd.h  EposWrapper.cpp  EposWrapper.h  LICENSE  LoadLibrary.cpp  README.md  Source.cpp  calibration.cpp  calibration.h  dllmain.cpp  pch.h
Calibrat.a671a402/x64/Debug/: CodeAnalysisResultManifest.txt  EposWrapper.nativecodeanalysis.sarif  LoadLibrary.nativecodeanalysis.sarif  Source.nativecodeanalysis.sarif  calibration.nativecodeanalysis.sarif  pch.nativecodeanalysis.sarif  vc143.idb
Calibrat.a671a402/x64/Debug/Calibrat.a671a402.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Calibration motor.lastbuildstate
include/: Calibration ez  calibration.cpp  calibration.h  calili test
